[build-system]
requires = [
    "scikit-build-core>=0.5.0",
    "pybind11>=2.11.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "flux-limiter"
version = "0.1.14"
description = "A High performance framework-agnostic rate limiter for Django, FastAPI, and Flask"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Swayam Jain" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Framework :: Django",
  "Framework :: FastAPI",
  "Framework :: Flask",
  "Intended Audience :: Developers",
]
dependencies = [
    "redis>=7.1.0",
    "tomli>=2.3.0",
]

[project.optional-dependencies]
test = [
    "flask>=3.1.2",
    "django>=5.2.9",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-django>=4.5.0", 
]
dev = [
    "pytest>=7.0.0",
]

[tool.scikit-build]
wheel.expand-macos-universal-tags = false
wheel.packages = ["src/flux"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "src/flux/__init__.py"

[tool.scikit-build.cmake]
version = ">=3.15"
args = ["-DCMAKE_POLICY_VERSION_MINIMUM=3.5"]
