[build-system]
requires = [
    "scikit-build-core>=0.5.0",
    "pybind11>=2.11.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "flux-limiter"
version = "0.1.18"

description = "High-performance Python rate limiter for Django, FastAPI, and Flask using Redis and Lua"

readme = "PYPI.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
  { name = "Swayam Jain" }
]

keywords = [
  "rate limiting",
  "python rate limiter",
  "redis rate limiter",
  "api rate limiting",
  "throttling",
  "django rate limit",
  "fastapi rate limiter",
  "flask rate limiter",
  "gcra",
  "distributed systems"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",

  "Framework :: Django",
  "Framework :: FastAPI",
  "Framework :: Flask",

  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Distributed Computing",

  "Intended Audience :: Developers",
]

dependencies = [
    "redis>=7.1.0",
    "tomli>=2.3.0",
]

[project.urls]
Homepage = "https://github.com/Swam244/flux"
Repository = "https://github.com/Swam244/flux"
Issues = "https://github.com/Swam244/flux/issues"
Documentation = "https://github.com/Swam244/flux#readme"

[project.optional-dependencies]
test = [
    "uvicorn>=0.40.0",
    "gunicorn>=23.0.0",
    "flask>=3.1.2",
    "django>=5.2.9",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-django>=4.5.0", 
]

dev = [
    "pytest>=9.0.2",
]

[tool.scikit-build]
wheel.expand-macos-universal-tags = false
wheel.packages = ["src/flux"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "src/flux/__init__.py"

[tool.scikit-build.cmake]
version = ">=3.15"
args = ["-DCMAKE_POLICY_VERSION_MINIMUM=3.5"]
